--- a/04-NormalDist.Rmd
+++ b/04-NormalDist.Rmd
@@ -1,25 +1,21 @@
 # Lab 4: Normal Distribution & Central Limit Theorem
 
+```{=html}
 <script>
 $("#coverpic").hide();
 </script>
-
-<span class="newthought">
-By a small sample, we may judge of the whole piece.
----Miguel de Cervantes from Don Quixote
-</span>
-
-
+```
+[ By a small sample, we may judge of the whole piece. ---Miguel de Cervantes from Don Quixote ]{.newthought}
 
 ## General Goals
 
-1. Distributions
-2. Sampling from distributions
-3. Sampling distribution of the mean
-4. Sampling statistics (statistics of many samples)
-5. Central limit theorem
-6. Normal Distribution
-7. z-scores
+1.  Distributions
+2.  Sampling from distributions
+3.  Sampling distribution of the mean
+4.  Sampling statistics (statistics of many samples)
+5.  Central limit theorem
+6.  Normal Distribution
+7.  z-scores
 
 ## R
 
@@ -75,10 +71,9 @@ This is histogram is flattish. Not perfectly flat, after all we only took 1000 s
 hist(runif(10000,0,1))
 ```
 
-
 #### rbinom the binomial distribution
 
-The binomial distribution sounds like a scary word... binomial (AAGGGGHHHHH, stay away!). The binomial can be a coin flipping distribution. You use `rbinom(n, size, prob)`. `n` gives the number of samples you want to take. We'll keep `size = 1` for now, it's the number of trials (forget this for now, it's more useful for more complicated things than what we are doing, if you want to know what it does, try it out, and see if you figure it out). `prob` is a little list you make of probabilities, that define how often certain things happen. 
+The binomial distribution sounds like a scary word... binomial (AAGGGGHHHHH, stay away!). The binomial can be a coin flipping distribution. You use `rbinom(n, size, prob)`. `n` gives the number of samples you want to take. We'll keep `size = 1` for now, it's the number of trials (forget this for now, it's more useful for more complicated things than what we are doing, if you want to know what it does, try it out, and see if you figure it out). `prob` is a little list you make of probabilities, that define how often certain things happen.
 
 For example, consider flipping a coin. It will be heads or tails, and the coin, if it is fair, should have a 50% chance of being heads or tails. Here's how we flip a coin 10 times using `rbinom`.
 
@@ -94,8 +89,9 @@ We get a bunch of 0s, and 1s. We can pretend 0 = tails, and 1 = heads. Great, no
 coin_flips <- rbinom(10,1,.5)
 sum(coin_flips)
 ```
- Alright, so we get the sum, which tells us the number of heads. But, should we always get that number of heads if we flipped a coin 10 times? If you keep redoing the above, you'll get different answers. 5 heads will be the most frequent answer, but you will get lots of other answers too.
- 
+
+Alright, so we get the sum, which tells us the number of heads. But, should we always get that number of heads if we flipped a coin 10 times? If you keep redoing the above, you'll get different answers. 5 heads will be the most frequent answer, but you will get lots of other answers too.
+
 Hold on to your seats for this next one. With R, we can simulate the flipping of a coin 10 times (you already know that, you just did it), and we can do that over and over as many times as we want. For example, we could do it 100 times over, saving the number of heads for each set of 10 flips. Then we could look at the distribution of those sums. That would tell us about the range of things that can happen when we flip a coin 10 times. We can do that in loop like this:
 
 ```{r}
@@ -108,7 +104,7 @@ for(i in 1:1000){
 hist(save_number_of_heads)
 
 ```
- 
+
 See, that wasn't too painful. Now we see another histogram. The histogram shows us the frequency observing different numbers of heads (for 10 flips) across the 1000 simulations. 5 happens the most, but 2 happens sometimes, and so does 8. All of the possibilities seem to happen sometimes, some more than others.
 
 #### rnorm the normal distribution
@@ -172,13 +168,13 @@ sample_means <- my_df %>%
 knitr::kable(sample_means)
 
 ```
- 
+
 So, those are the means of our samples. What should the means be? Well, we would hope they are estimating the mean of the distribution they came from, which was 0. Notice, the numbers are all not 0, but they are kind of close to 0.
- 
+
 #### histogram for the means of the samples
- 
+
 What if we now plot these 10 means (of each of the samples) in their own distribution?
- 
+
 ```{r}
  
  ggplot(sample_means, aes(x=means))+
@@ -187,7 +183,7 @@ What if we now plot these 10 means (of each of the samples) in their own distrib
  
 ```
 
-That is the distribution of the sample means. It doesn't look like much eh? That's because we only took 10 samples right. 
+That is the distribution of the sample means. It doesn't look like much eh? That's because we only took 10 samples right.
 
 Notice one more thing...What is the mean of our 10 sample means? This is a mean of means. Remember that.
 
@@ -195,11 +191,11 @@ Notice one more thing...What is the mean of our 10 sample means? This is a mean 
 mean(sample_means$means)
 ```
 
-Well, that's pretty close to zero. Which is good. When we average over our samples, they better estimate the mean of the distribution they came from. 
+Well, that's pretty close to zero. Which is good. When we average over our samples, they better estimate the mean of the distribution they came from.
 
 #### simulating the distribution of sample means
 
-Our histogram with 10 sample means looked kind of sad. Let's give it some more friends. How about we repeat our little sampling experiment 1000 times. 
+Our histogram with 10 sample means looked kind of sad. Let's give it some more friends. How about we repeat our little sampling experiment 1000 times.
 
 Explain...We take 1000 samples. Each sample takes 20 scores from a normal distribution (mean=0, SD=1). Then we find the means of each sample (giving us 1000 sample means). Then, we plot that distribution.
 
@@ -224,7 +220,6 @@ sample_means <- my_df %>%
 
 
 ```
-
 
 There, that looks more like a sampling distribution of the sample means. Notice it's properties. It is centered on 0, which tells us that sample means are mostly around zero. It is also bell-shaped, like the normal distribution it came from. It is also quite narrow. The numbers on the x-axis don't go much past -.5 to +.5.
 
@@ -269,7 +264,7 @@ From reading the textbook and attending lecture, you should be able to start thi
 
 ### Central limit theorem
 
-We have been building you up for the central limit theorem, described in the textbook and in class. The central limit theorem is basically that the distribution of sample means will be a normal curve. We already saw that before. But, the interesting thing about it, is that the distribution of your sample means will be normal, even if the distribution the samples came from is not normal. Huh what? 
+We have been building you up for the central limit theorem, described in the textbook and in class. The central limit theorem is basically that the distribution of sample means will be a normal curve. We already saw that before. But, the interesting thing about it, is that the distribution of your sample means will be normal, even if the distribution the samples came from is not normal. Huh what?
 
 To demonstrate this the next bit of code is modified from what we did earlier. We create 100 samples. Each sample has 1000 observations. All of them come from a uniform distribution between 0 to 1. This means all of the numbers between 0 and 1 should occur equally frequently. Below I plot histograms for the first 10 samples (out of the 100 total, 100 is too many to look at). Notice the histograms are not normal, they are roughly flat.
 
@@ -286,7 +281,7 @@ ggplot(my_df[1:(10*1000),], aes(x=scores))+
 
 ```
 
-We took samples from a flat uniform distribution, and the samples themselves look like that same flat distribution. 
+We took samples from a flat uniform distribution, and the samples themselves look like that same flat distribution.
 
 HOWEVER, if we now do the next step, and compute the means of each of our 100 samples, we could then look at the sampling distribution of the sample means. Let's do that:
 
@@ -311,23 +306,21 @@ As you can see, the sampling distribution of the sample means is not flat. It's 
 
 "Why does any of this matter, why are we doing this, can we stop now!!!!!! PLEEEEAASSEE, somebody HELP".
 
-We are basically just repeating what was said in the textbook, and the lecture, so that you get the concept explained in a bunch of different ways. It will sink in. 
+We are basically just repeating what was said in the textbook, and the lecture, so that you get the concept explained in a bunch of different ways. It will sink in.
 
-The reason the central limit theorem is important, is because researchers often take many samples, then analyse the means of their samples. That's what they do. 
+The reason the central limit theorem is important, is because researchers often take many samples, then analyse the means of their samples. That's what they do.
 
-An experiment might have 20 people. You might take 20 measurements from each person. That's taking 20 samples. Then, because we know that samples are noisy. We take the means of the samples. 
+An experiment might have 20 people. You might take 20 measurements from each person. That's taking 20 samples. Then, because we know that samples are noisy. We take the means of the samples.
 
 So, what researchers are often looking at, (and you too, very soon) are means of samples. Not just the samples. And, now we know that means of samples (if we had a lot of samples), look like they are distributed normally (the central limit theorem says the should be).
 
-We can use this knowledge. If we learn a little bit more about normal distributions, and how they behave and work, we can take that and use it to understand our sample means better. This will become more clear as head into the topic of statistical inference next week. This is all a build up for that. 
+We can use this knowledge. If we learn a little bit more about normal distributions, and how they behave and work, we can take that and use it to understand our sample means better. This will become more clear as head into the topic of statistical inference next week. This is all a build up for that.
 
 To continue the build-up we now look at some more properties of the normal distribution.
-
 
 #### Graphing the normal distribution
 
 "Wait, I thought we already did that". We sort of did. We sampled numbers and made histograms that looked like normal distributions. But, a "normal distribution" is more of an abstract idea. It looks like this in the abstract:
-
 
 ```{r}
 normal_dist <- dnorm(seq(-4,4,.1), 0, 1)
@@ -353,14 +346,14 @@ We can use the `pnorm` function to confirm this:
 pnorm(0, mean = 0, sd= 1, lower.tail=FALSE)
 ```
 
-Agreed, `pnorm` tells us the probability of getting 0 or greater is .5. 
+Agreed, `pnorm` tells us the probability of getting 0 or greater is .5.
 
 Well, what is the probability of getting a 2 or greater? That's a bit harder to judge, obviously less than 50%. Use R like this to find out:
-
 
 ```{r}
 pnorm(2, mean = 0, sd= 1, lower.tail=FALSE)
 ```
+
 The probability of getting a 2 or greater is .0227 (not very probable)
 
 What is the probability of getting a score between -1 and 1?
@@ -369,18 +362,20 @@ What is the probability of getting a score between -1 and 1?
 ps<-pnorm(c(-1,1), mean = 0, sd= 1, lower.tail=FALSE)
 ps[1]-ps[2]
 ```
- About 68%. About 68% of all the numbers would be between -1 and 1. So naturally, about 34% of the numbers would be between 0 and 1. Notice, we are just getting a feeling for this, you'll see why in a bit when we do z-scores (some of you may realize we are already doing that...) 
- 
- What about the numbers between 1 and 2?
- 
+
+About 68%. About 68% of all the numbers would be between -1 and 1. So naturally, about 34% of the numbers would be between 0 and 1. Notice, we are just getting a feeling for this, you'll see why in a bit when we do z-scores (some of you may realize we are already doing that...)
+
+What about the numbers between 1 and 2?
+
 ```{r}
 ps<-pnorm(c(1,2), mean = 0, sd= 1, lower.tail=FALSE)
 ps[1]-ps[2]
 ```
- About 13.5% of numbers fall in that range, not much. 
- 
- How about between 2 and 3?
- 
+
+About 13.5% of numbers fall in that range, not much.
+
+How about between 2 and 3?
+
 ```{r}
 ps<-pnorm(c(2,3), mean = 0, sd= 1, lower.tail=FALSE)
 ps[1]-ps[2]
@@ -392,10 +387,9 @@ Again a very small amount, only 2.1 % of the numbers, not a a lot.
 
 You can always use `pnorm` to figure how the probabilities of getting certain values from any normal distribution. That's great.
 
-
 ### z-scores
 
-We just spent a bunch of time looking at a very special normal distribution, the one where the mean = 0, and the standard deviation = 1. Then we got a little bit comfortable with what those numbers mean. 0 happens a lot. Numbers between -1 and 1 happen a lot. Numbers bigger or smaller than 1 also happen fairly often, but less often. Number bigger than 2 don't happen a lot, numbers bigger than 3 don't happen hardly at all. 
+We just spent a bunch of time looking at a very special normal distribution, the one where the mean = 0, and the standard deviation = 1. Then we got a little bit comfortable with what those numbers mean. 0 happens a lot. Numbers between -1 and 1 happen a lot. Numbers bigger or smaller than 1 also happen fairly often, but less often. Number bigger than 2 don't happen a lot, numbers bigger than 3 don't happen hardly at all.
 
 We can use this knowledge for our convenience. Often, we are not dealing with numbers exactly like these. For example, someone might say, I got a number, it's 550. It came from a distribution with mean = 600, and standard deviation = 25. So, does 545 happen a lot or not? The numbers don't tell you right away.
 
@@ -403,17 +397,17 @@ If we were talking about our handy distribution with mean = 0 and standard devia
 
 z-scores are a way of transforming one set of numbers into our neato normal distribution, with mean = 0 and standard deviation = 1.
 
-Here's a simple example, like what we said in the textbook. If you have a normal distribution with mean = 550, and standard deviation 25, then how far from the mean is the number 575? It's a whole 25 away (550+25 = 575). How many standard deviations is that? It's 1 whole standard deviation.  So does a number like 575 happen a lot? Well, based on what you know about normal distributions, 1 standard deviation of the mean isn't that far, and it does happen fairly often. This is what we are doing here.
+Here's a simple example, like what we said in the textbook. If you have a normal distribution with mean = 550, and standard deviation 25, then how far from the mean is the number 575? It's a whole 25 away (550+25 = 575). How many standard deviations is that? It's 1 whole standard deviation. So does a number like 575 happen a lot? Well, based on what you know about normal distributions, 1 standard deviation of the mean isn't that far, and it does happen fairly often. This is what we are doing here.
 
 #### Calculating z-scores
 
-1. get some numbers
+1.  get some numbers
 
 ```{r}
 some_numbers <- rnorm(20,50,25)
 ```
 
-2. Calculate the mean and standard deviation
+2.  Calculate the mean and standard deviation
 
 ```{r}
 my_mean <- mean(some_numbers)
@@ -423,14 +417,14 @@ print(my_mean)
 print(my_sd)
 ```
 
-3. subtract the mean from your numbers
+3.  subtract the mean from your numbers
 
 ```{r}
 differences<-some_numbers-my_mean
 print(differences)
 ```
 
-4. divide by the standard deviation
+4.  divide by the standard deviation
 
 ```{r}
 z_scores<-differences/my_sd
@@ -439,8 +433,7 @@ print(z_scores)
 
 Done. Now you have converted your original numbers into what we call standardized scores. They are standardized to have the same properties (assumed properties) as a normal distribution with mean = 0, and SD = 1.
 
-You could look at each of your original scores, and try to figure out if they are likely or unlikely numbers. But, if you make them into z-scores, then you can tell right away. Numbers close to 0 happen a lot, bigger numbers closer to 1 happen less often, but still fairly often, and numbers bigger than 2 or 3 hardly happen at all. 
-
+You could look at each of your original scores, and try to figure out if they are likely or unlikely numbers. But, if you make them into z-scores, then you can tell right away. Numbers close to 0 happen a lot, bigger numbers closer to 1 happen less often, but still fairly often, and numbers bigger than 2 or 3 hardly happen at all.
 
 ### Generalization Exercise
 
@@ -448,17 +441,26 @@ You could look at each of your original scores, and try to figure out if they ar
 
 Complete the generalization exercise described in your R Markdown document for this lab.
 
-1. Simulate the sampling distribution of the mean for sample-size =10, from a normal distribution with mean =100, and standard deviation = 25. Run the simulation 1000 times, taking 1000 samples, and computing the sample mean each time.
+1.  Simulate the sampling distribution of the mean for sample-size =10, from a normal distribution with mean =100, and standard deviation = 25. Run the simulation 1000 times, taking 1000 samples, and computing the sample mean each time.
 
- a. Plot the sampling distribution of the mean in a histogram
- b. Report the mean of the sampling distribution of the mean
- c. Report the standard deviation of the sampling distribution of the mean
- 
-2. Repeat all of the above, except change the sample-size to 100 for all simulations
+```{=html}
+<!-- -->
+```
+a.  Plot the sampling distribution of the mean in a histogram
+b.  Report the mean of the sampling distribution of the mean
+c.  Report the standard deviation of the sampling distribution of the mean
 
- a. Plot the sampling distribution of the mean in a histogram
- b. Report the mean of the sampling distribution of the mean
- c. Report the standard deviation of the sampling distribution of the mean
+```{=html}
+<!-- -->
+```
+2.  Repeat all of the above, except change the sample-size to 100 for all simulations
+
+```{=html}
+<!-- -->
+```
+a.  Plot the sampling distribution of the mean in a histogram
+b.  Report the mean of the sampling distribution of the mean
+c.  Report the standard deviation of the sampling distribution of the mean
 
 ### Writing assignment
 
@@ -466,22 +468,15 @@ Complete the generalization exercise described in your R Markdown document for t
 
 Complete the writing assignment described in your R Markdown document for this lab. When you have finished everything. Knit the document and hand in your stuff (you can submit your .RMD file to blackboard if it does not knit.)
 
-1. Explain the concept of sampling error (1 point)
+1.  Explain the concept of sampling error (1 point)
 
-2. Explain why the standard deviation of the sampling distribution of mean gets smaller as sample-size increases (1 point)
+2.  Explain why the standard deviation of the sampling distribution of mean gets smaller as sample-size increases (1 point)
 
-General grading. 
+General grading.
 
-- You must write in complete sentences. Point form sentences will be given 0 points.
-- Completely incorrect answers will receive 0 points. 
-- If your answer is generally correct but very difficult to understand and unclear you may receive half points for the question
-
-
-
-
-
-
-
+-   You must write in complete sentences. Point form sentences will be given 0 points.
+-   Completely incorrect answers will receive 0 points.
+-   If your answer is generally correct but very difficult to understand and unclear you may receive half points for the question
 
 ## Excel
 
@@ -491,10 +486,10 @@ How to do it in Excel
 
 In this lab, we will use SPSS to transform a set of raw data into z-scores using two methods:
 
-1. Saving data as standardized values
-2. Computing a new variable manually
+1.  Saving data as standardized values
+2.  Computing a new variable manually
 
-Let's first begin with a short data set we will enter into a new SPSS data spreadsheet. Let's use the following data set: {x= 1, 3, 2, 5, 4, 6, 5, 8, 9}. Enter these into SPSS and name them appropriately. 
+Let's first begin with a short data set we will enter into a new SPSS data spreadsheet. Let's use the following data set: {x= 1, 3, 2, 5, 4, 6, 5, 8, 9}. Enter these into SPSS and name them appropriately.
 
 ```{r , echo=FALSE,dev='png'}
 knitr::include_graphics('img/4.4.11.png')
@@ -502,22 +497,21 @@ knitr::include_graphics('img/4.4.11.png')
 
 ### Saving data as standardized values.
 
----
+------------------------------------------------------------------------
 
-
-This method is a quick and simple way to turn a set of scores in raw format into z-scores. First, go to <span style="color:blue">Analyze</span>, then <span style="color:blue">Descriptive Statistics</span>, then <span style="color:blue">Descriptives</span>:
+This method is a quick and simple way to turn a set of scores in raw format into z-scores. First, go to [Analyze]{style="color:blue"}, then [Descriptive Statistics]{style="color:blue"}, then [Descriptives]{style="color:blue"}:
 
 ```{r , echo=FALSE,dev='png'}
 knitr::include_graphics('img/4.4.12.png')
 ```
 
-A window will appear, asking for you to specify for which variable you would like descriptive statistics. Move the `x` variable into the right field using the arrow. Then, make sure to check off <span style="color:blue">Save standardized values as variables</span>:
+A window will appear, asking for you to specify for which variable you would like descriptive statistics. Move the `x` variable into the right field using the arrow. Then, make sure to check off [Save standardized values as variables]{style="color:blue"}:
 
 ```{r , echo=FALSE,dev='png'}
 knitr::include_graphics('img/4.4.13.png')
 ```
 
-Now, click <span style="color:blue">Ok</span>. 
+Now, click [Ok]{style="color:blue"}.
 
 SPSS will produce an output table containing some basic descriptive statistics for the `x` variable:
 
@@ -533,29 +527,27 @@ knitr::include_graphics('img/4.4.15.png')
 
 ### Computing variables
 
----
+------------------------------------------------------------------------
 
+If you use the method shown above to convert a set of measurements to z-scores, you don't need to use this method to do the same thing. However, computing new variables may be useful for more than just converting scores to z-scores, so it's worth illustrating as well. The take-away message here is that you can use SPSS to create new variables based on existing ones.
 
-If you use the method shown above to convert a set of measurements to z-scores, you don't need to use this method to do the same thing. However, computing new variables may be useful for more than just converting scores to z-scores, so it's worth illustrating as well. The take-away message here is that you can use SPSS to create new variables based on existing ones. 
-
-To illustrate how this is done, let's work with the data sheet we used in the previous example. Currently, it includes a column for our x variable, and the new `Zx` variable we created using the Analyze > Descriptive Statistics > Descriptives menu. 
+To illustrate how this is done, let's work with the data sheet we used in the previous example. Currently, it includes a column for our x variable, and the new `Zx` variable we created using the Analyze \> Descriptive Statistics \> Descriptives menu.
 
 ```{r , echo=FALSE,dev='png'}
 knitr::include_graphics('img/4.4.15.png')
 ```
 
-This time, we are going to turn our x variable measurements into z-scores manually. In order to do this, we're going to need the necessary components to calculate z-scores: We will need the mean and standard deviation of the `x` variable. Remember, in the previous section a table of descriptive statistics was generated: 
+This time, we are going to turn our x variable measurements into z-scores manually. In order to do this, we're going to need the necessary components to calculate z-scores: We will need the mean and standard deviation of the `x` variable. Remember, in the previous section a table of descriptive statistics was generated:
 
 ```{r , echo=FALSE,dev='png'}
 knitr::include_graphics('img/4.4.14.png')
 ```
 
-We know that the mean of variable `x` is 4.78 and the standard deviation is 2.635. In order to turn every measurement in variable `x` into a z-score, then, we must subtract 4.78 from each `x`, then divide that difference by 2.635. We are going to ask SPSS to do this by going to the <span style="color:blue">Transform</span> menu, and then selecting <span style="color:blue">Compute Variable</span>. 
+We know that the mean of variable `x` is 4.78 and the standard deviation is 2.635. In order to turn every measurement in variable `x` into a z-score, then, we must subtract 4.78 from each `x`, then divide that difference by 2.635. We are going to ask SPSS to do this by going to the [Transform]{style="color:blue"} menu, and then selecting [Compute Variable]{style="color:blue"}.
 
 ```{r , echo=FALSE,dev='png'}
 knitr::include_graphics('img/4.4.16.png')
 ```
-
 
 This will open the Compute window:
 
@@ -563,15 +555,9 @@ This will open the Compute window:
 knitr::include_graphics('img/4.4.17.png')
 ```
 
-Here, let's first enter a name for the new variable we're about to create. In the field labeled "Target Variable", enter a name for your new variable. Let's try `new_z` as the name. 
+Here, let's first enter a name for the new variable we're about to create. In the field labeled "Target Variable", enter a name for your new variable. Let's try `new_z` as the name.
 
-Next, in the field labeled "Numeric Expression", we will specify the calculation to be made. Because I want SPSS to take the variable `x`, subtract 4.78 from it, and then divide this difference by 2.635, I am going to type in this formula:
-1. First, type in an open parenthesis
-2. Second, select `x` from the field on the left and move it to the "Numeric Expression" field using the arrow.
-3. Type a minus sign, followed by 4.78
-4. Type in a closed parenthesis.
-5. Type in a backslash "/" (this specifies division)
-6. Type in the standard deviation, 2.635
+Next, in the field labeled "Numeric Expression", we will specify the calculation to be made. Because I want SPSS to take the variable `x`, subtract 4.78 from it, and then divide this difference by 2.635, I am going to type in this formula: 1. First, type in an open parenthesis 2. Second, select `x` from the field on the left and move it to the "Numeric Expression" field using the arrow. 3. Type a minus sign, followed by 4.78 4. Type in a closed parenthesis. 5. Type in a backslash "/" (this specifies division) 6. Type in the standard deviation, 2.635
 
 Your Compute window should now look like this:
 
@@ -579,18 +565,17 @@ Your Compute window should now look like this:
 knitr::include_graphics('img/4.4.18.png')
 ```
 
-Now, click <span style="color:blue">OK</span>. SPSS will generate a blank output window that confirms you have computed a variable. You may minimize or close this window and go back to your SPSS spreadsheet. It should now have a new variable listed, `new_z`, and the computed z-scores should look very similar to the previously calculated z-scores (any differences are due to using rounded figures):
+Now, click [OK]{style="color:blue"}. SPSS will generate a blank output window that confirms you have computed a variable. You may minimize or close this window and go back to your SPSS spreadsheet. It should now have a new variable listed, `new_z`, and the computed z-scores should look very similar to the previously calculated z-scores (any differences are due to using rounded figures):
 
 ```{r , echo=FALSE,dev='png'}
 knitr::include_graphics('img/4.4.19.png')
 ```
 
-You can use this Compute Variable window to calculate z-scores or make any calculations using existing variables. 
-
+You can use this Compute Variable window to calculate z-scores or make any calculations using existing variables.
 
 ### Practice Problems
 
-___
+------------------------------------------------------------------------
 
 “Professor, do you grade on a curve?”
 
@@ -598,14 +583,54 @@ This is probably the most commonly-asked question in Statistics class. Everyone 
 
 [Here](https://github.com/CrumpLab/statisticsLab/blob/master/data/spssdata/StatsGrades.sav) is a link to an SPSS file containing 50 students’ exam grades (let’s say it’s the final exam for a Statistics class).
 
-1. Create a table containing the mean and standard deviation for this sample of scores. Now, produce a frequency histogram of the score data. Describe the distribution.
+1.  Create a table containing the mean and standard deviation for this sample of scores. Now, produce a frequency histogram of the score data. Describe the distribution.
 
-2. Transform each student’s score into a Z-score (you can use either method shown in this tutorial). Now, plot the frequency histogram of this Z-score distribution. Compare it to the raw score distribution. How are they the same? How are they different?
+2.  Transform each student’s score into a Z-score (you can use either method shown in this tutorial). Now, plot the frequency histogram of this Z-score distribution. Compare it to the raw score distribution. How are they the same? How are they different?
 
-3. Imagine you are a student in this class who received a 90 on this exam. However, the Professor has decided to GRADE ON A CURVE (shock! awe!), such that only the top 10% of the class receives an A (this professor only gives whole grades, no minuses or pluses). Calculate the z-score that corresponds to a raw score of 90 on this exam. Will you get an A with this grade? Why or why not?
+3.  Imagine you are a student in this class who received a 90 on this exam. However, the Professor has decided to GRADE ON A CURVE (shock! awe!), such that only the top 10% of the class receives an A (this professor only gives whole grades, no minuses or pluses). Calculate the z-score that corresponds to a raw score of 90 on this exam. Will you get an A with this grade? Why or why not?
 
 ## JAMOVI
 
 How to do it in JAMOVI
+
+## CogStat
+
+### Goals
+
+-   Overviewing distributions
+-   Sampling from distributions
+-   Sampling distribution of the mean
+-   Sampling statistics (statistics of many samples)
+-   Normal Distribution
+
+### Sample
+
+In the manual describing other software packages, there are some chapters where generated data are used. This is easy to implement in R, but since CogStat cannot be used for modifying the data, it cannot generate data either. However, similar to data modification, we may generate these data with the help of a spreadsheet.
+
+To solve the task you can load the data file “4.2_10randomnumber” from the demo data or you can generate the data for yourself. For this, open Excel. There is an easy way to generate data using the function “=RANDBETWEEN()”, which will generate a random number between two given parameters if you write it into a cell or the formula bar. The formula can be pasted to other cells, so more random data can be generated.
+
+![](images/sample.png)
+
+This function acts like an endless gumball machine. You put the gumballs inside with different properties, say numbers between 1 and 10, and then you let it  take them out.  Here the function randomly picks numbers between 1 and 10 each time. We did this 10 times, so our sample has 10 data points in it, but we could do as many times as we would like to. The more random number we would generate the more it would show us a smooth normal distribution.
+
+Let’s take a look at our data after opening it with CogStat. We can run an “Explore variable” analysis on it to get the frequency details. Note, that the generated data in Excel is regenerating itself with every change made to the spreadsheet, so you might see slightly different results each time.
+
+![](images/descrivitvesrandom.png)
+
+![](images/histogramrand.png)
+
+We can also generate a variable with values where an exact number has more chance to appear. This way the generated data still remains random, but its distribution will change. In Excel, this can be done by generating random data as before in cell A1. After that, in B1 another formula must be used, write =IF(A1\>5;5; A1), this way more 5s should appear in the dataset (row B) than before when we were just generating random numbers. This should also be visible in the distribution.
+
+![](https://lh7-us.googleusercontent.com/docsz/AD_4nXcbT_U_jW037Od5MWiIkaRk12X9YDFywK5a6sukXe_dorCGxdHTcIsJP6RjMOZnk4lrXyIjwbVah_mchoWO3tif5wLYeViIkkZCqZZAq8L6-eR5ArjlEjg0rH5k6hwd-S4DuX24gBGPmJgAGfXiUg9P8wu-?key=K1Go1BdfZCryVSDIspdlWA)
+
+You can also open this file from demo data, open “4.2_morefives and choose the second column “rand_changed” for analysis. We should choose “Explore variable” to take a look at the second, changed variables' frequency traits.
+
+![](images/morefivesfreq.png)
+
+As you see more than half of the generated numbers turned out to be 5 (54% of all).
+
+![](images/morefiveshisto.png)
+
+### uniform distribution
 
 
